2004-02-10  Bryan Forbes  <mxpxfifws@yahoo.com>

	* tools/m4/convert_gtk.m4: added TargetFlags<->GtkTargetFlags,
	IconLookupFlags<->GtkIconLookupFlags, and
	IconThemeError<->GtkIconThemeError; added conversions for
	IconTheme<->GtkIconTheme and TargetList<->GtkTargetList.
	* gtk/gtkmm/targetentry.[cc|h]: use the TargetFlags enum.
	* gtk/src/Makefile_list_of_hg.am_fragment: added icontheme.hg and
	targetlist.hg.
	* gtk/src/enums.hg: added TargetFlags enum.
	* gtk/src/frame.hg: use Allocation instead of GtkAllocation.
	* gtk/src/icontheme.[ccg|hg]: added IconTheme class.
	* gtk/src/socket.hg: use Gdk::NativeWindow instead of GdkNativeWindow.
	* gtk/src/targetlist.[ccg|hg]: added TargetList class.
	* gtk/src/widget.[ccg|hg]: use the new TargetList class; typedef Requisition
	and Allocation and convert methods to use them; use Glib::ustring instead of
	GdkAtom where necessary;
	* demos/gtk-demo/example_drawingarea.cc:
	* examples/cellrenderercustom/cellrendererpopup.cc: changed to use new
	Allocation API.
	* examples/dnd/dndwindow.c: changed to use the new TargetFlag enum.
	* fixed up as per murrayc's requests; closes bug #133936.

2004-02-10  Bryan Forbes  <mxpxfifws@yahoo.com>

	* tools/m4/convert_gdk.m4: added InputSource<->GdkInputSource,
	Glib::ustring<->GdkAtom, and NativeWindow<->GdkNativeWindow.
	* gdk/src/colormap.hg: Used Gdk::Color instead of GdkColor.
	* gdk/src/device.hg: Wrapped GdkInputSource and used the new enum in
	corresponding methods.
	* gdk/src/display.[hg|ccg]: Used Glib::ustring instead of GdkAtom and
	NativeWindow instead of GdkNativeWindow.
	* gdk/src/dragcontext.[ccg|hg]: Used DragProtocol instead of
	GdkDragProtocol; GdkAtom->Glib::ustring.
	* gdk/src/event.[ccg|hg]: 
	* gdk/src/pixmap.[ccg|hg]: GdkNativeWindow->NativeWindow.
	* gdk/src/types.[ccg|hg]: Added Gdk::AtomStringTraits struct back and
	typedef'd it as AtomString; typedef'd	GdkNativeWindow as Gdk::NativeWindow.
	* gdk/src/window.hg: GdkGeometry->Geometry.