@@ -1,3 +1,8 @@
+2004-02-11  Matthew Walton  <matthew@alledora.co.uk>
+
+	* examples/book/dialogs/filechooserdialog/examplewindow.cc:
+	Add buttons, as you would need in a real example.
+
 2004-02-10  Bryan Forbes  <mxpxfifws@yahoo.com>
 
 	* tools/m4/convert_gtk.m4: added TargetFlags<->GtkTargetFlags,
